# ProyectoFinal-Eletti-Palandri

Ducha/: Ducha.csv  Ducha.kicad_pcb  Ducha.kicad_prl  Ducha.kicad_pro  Ducha.kicad_sch  Ducha.xml  fp-info-cache  sym-lib-table  ~Ducha.kicad_pcb.lck
Ducha/3d_models/: User Library-OSTVN10A150.STEP  c-5-520314-8-y-3d.stp
Ducha/bom/: ibom.html
Ducha/ducha.pretty/: CONN_OSTVN10A150_OST.kicad_mod  DGS0010A_L.kicad_mod  DGS0010A_M.kicad_mod  DGS0010A_N.kicad_mod  SOP50P310X90-8N.kicad_mod  SOP50P490X110-10N.kicad_mod  SOP65P640X120-20N.kicad_mod  bet_rivers_logo.kicad_mod
Ducha/gerber/: Ducha-B_Cu.gbr  Ducha-B_Mask.gbr  Ducha-B_Paste.gbr  Ducha-B_Silkscreen.gbr  Ducha-Edge_Cuts.gbr  Ducha-F_Cu.gbr  Ducha-F_Mask.gbr  Ducha-F_Paste.gbr  Ducha-F_Silkscreen.gbr  Ducha-NPTH.drl  Ducha-PTH.drl  (+1 more)
ducha_en_cama/: README.md
ducha_en_cama/firmware/drivers/: CMakeLists.txt
ducha_en_cama/firmware/drivers/devices/inc/: FDC1004.h  LCD_I2C.h  at24c.h  ds18b20.h  ds3231.h
ducha_en_cama/firmware/drivers/devices/src/: FDC1004.c  LCD_I2C.c  at24c.c  ds18b20.c  ds3231.c  switch.c
ducha_en_cama/firmware/drivers/microcontroller/inc/: analog_io_mcu.h  delay_mcu.h  general.h  gpio_fast_out_mcu.h  i2c_mcu.h
ducha_en_cama/firmware/drivers/microcontroller/src/: analog_io_mcu.c  general.c  gpio_mcu.c
ducha_en_cama/firmware/modules/: CMakeLists.txt
ducha_en_cama/firmware/modules/inc/: acquire.h  analyzer.h  connection.h  control.h  interface.h  interfaz.h  store.h
ducha_en_cama/firmware/modules/src/: acquire.c  analyzer.c  connection.c  control.c  interface.c  interfaz.c  store.c
(+123 files in other folders)
